# terraform-github

./: .gitignore  README.md
.github/: copilot-instructions.md
.github/workflows/: deploy-github-repository.yml
examples/repository/: README.md  main.tf  outputs.tf  providers.tf  terraform.tf  terraform.tfvars.example  variables.tf
mcp-server/: README.md  pyproject.toml
mcp-server/src/terraform_versions_mcp/: __init__.py  server.py
